--- a/style.css
+++ b/style.css
@@ -57,6 +57,21 @@ body {
   color: white;
 }
 
+.circle button:hover {
+  color: bisque;
+}
+
+.circle button:last-of-type:hover {
+  -webkit-animation-name: wiggle;
+  -ms-animation-name: wiggle;
+  -ms-animation-duration: 1000ms;
+  -webkit-animation-duration: 1000ms;
+  -webkit-animation-iteration-count: 1;
+  -ms-animation-iteration-count: 1;
+  -webkit-animation-timing-function: ease-in-out;
+  -ms-animation-timing-function: ease-in-out;
+}
+
 .circle button:focus {
   outline: none;
 }
@@ -96,6 +111,12 @@ nav ul li {
   transition: transform 0.4s ease-in;
 }
 
+nav ul li:hover{
+  cursor: pointer;
+  color: antiquewhite;
+  font-weight: 600;
+}
+
 nav ul li i {
   font-size: 20px;
   margin-right: 10px;
@@ -131,4 +152,29 @@ nav ul li + li + li {
 .content p {
   color: #333;
   line-height: 1.5;
+}
+
+/* animations */
+@-webkit-keyframes wiggle {
+  0% {-webkit-transform: rotate(10deg);}
+  25% {-webkit-transform: rotate(-10deg);}
+  50% {-webkit-transform: rotate(20deg);}
+  75% {-webkit-transform: rotate(-5deg);}
+  100% {-webkit-transform: rotate(0deg);}
+}
+
+@-ms-keyframes wiggle {
+  0% {-ms-transform: rotate(1deg);}
+  25% {-ms-transform: rotate(-1deg);}
+  50% {-ms-transform: rotate(1.5deg);}
+  75% {-ms-transform: rotate(-5deg);}
+  100% {-ms-transform: rotate(0deg);}
+}
+
+@keyframes wiggle {
+  0% {transform: rotate(10deg);}
+  25% {transform: rotate(-10deg);}
+  50% {transform: rotate(20deg);}
+  75% {transform: rotate(-5deg);}
+  100% {transform: rotate(0deg);}
 }
